--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,7 +1,7 @@
 .button {
   padding: 0.75rem 1.5rem;
-  background-color: #471396; /* Purple */
-  color: #FFCC00; /* Yellow text */
+  background-color: #471396;
+  color: #FFCC00; 
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -10,7 +10,7 @@
 }
 
 .button:hover {
-  background-color: #B13BFF; /* Bright purple on hover */
+  background-color: #B13BFF; 
 }
 
 .save-button {
